--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.1.1
   google_fonts: ^6.1.0
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
